<resources>
    <string name="app_name">Zandy</string>
    <string name="applicationTitle">Zandy: A Zotero Client for Android</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_new">New</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_identifier">Add by identifier</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_search">Search</string>
    <string name="view_items">View Items</string>
    <string name="view_collections">View Collections</string>
    <string name="log_in">Log in</string>
    <string name="logged_in">Logged in</string>
    <string name="search_hint">Search items</string>
    <string name="choose_parent_collection">Choose parent collection</string>
    <string name="status">Status:</string>
    <string name="scan">Scan</string>
    <string name="identifier_message">Look up item by identifier</string>
    <string name="identifier_hint">Enter identifier</string>
    <string name="identifier_looking_up">Looking up item&#8230;</string>
    <string name="identifier_lookup_failed">Error fetching metadata</string>
    <string name="identifier_processing">Parsing item data&#8230;</string>
    <string name="identifier_scan_failed">Scan cancelled or failed.</string>
    <string name="sort_year_title">Year, then title</string>
    <string name="sort_creator_year">Creator, then year</string>
    <string name="sort_title_year">Title, then year</string>
    <string name="sort_modified_title">Date modified, then title</string>
    <string name="all_items">All items</string>
    <string name="cant_open_item">Can\'t open %s</string>
    <string name="item_type">Item type</string>
    <string name="set_sort_order">Set sort order</string>
    <string name="search_results">Search results: %s</string>
    <string name="edit_item_field">Edit %s</string>
    <string name="item_delete_confirm">Delete this item?</string>
    <string name="item_type_change">Change item type</string>
    <string name="item_details">Item Details</string>
    <string name="item_attachment_info_template">%1$d notes, %2$d attachments</string>
    <string name="item_attachment_info_none">No attachments or notes.</string>
    <string name="item_collection_count">%1$d collections</string>
    <string name="item_more">%s. Tap for full view.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="view_online_warning">View this online?</string>
    <string name="attachment_zfs_available">Available for download</string>
    <string name="attachment_zfs_local">Downloaded</string>
    <string name="attachment_unknown">Status unknown</string>
    <string name="attachment_downloading">Downloading attachment for %s</string>
    <string name="attachment_unzipping">Unzipping&#8230;</string>
    <string name="attachment_no_download_url">No download URL for attachment. Try syncing again.</string>
	<string name="attachment_download_initiated">File download initiated.</string>
    <string name="attachment_download_failed">File download may have failed; try again.</string>
    <string name="attachment_download_failed_cant_write">Couldn\'t write downloaded file.</string>
	<string name="attachment_intent_failed">No application available to open files of type %s.</string>
	<string name="attachment_intent_failed_for_uri">No application available to open URI: %s</string>
    <string name="attachment_delete_confirm">Delete this attachment?</string>
    <string name="attachment_note_warning">Changes to notes on attachments cannot currently be synced, due to limitations in the Zotero API.</string>
    <string name="attachments_for_item">Attachments for %s</string>
	<string name="tags_for_item">Tags for %s</string>
	<string name="tag_auto">Auto</string>
	<string name="tag_user">User</string>
	<string name="tag_edit">Edit tag</string>
	<string name="tag_view_confirm">View items for this tag?</string>
 	<string name="tag_view">View</string>
 	<string name="tag_viewing_items">Tag: %s</string>
	<string name="collections">Collections</string>
	<string name="collections_for_item">Collections containing %s</string>
	<string name="collection_cant_open">Can\'t open %s</string>
	<string name="collection_no_subcollections">No subcollections for collection. To view items in the collection, touch and hold the collection.</string>
	<string name="collection_empty">Collection is empty, requesting update.</string>
	<string name="collection_membership_detail">Collection options</string>
	<string name="collection_remove_item">Remove item</string>
	<string name="sync_log_in_first">Log in to sync</string>
	<string name="sync_started">Started syncing&#8230;</string>
	<string name="sync_collection">Started syncing; refreshing collection list</string>
	<string name="sync_error">Synchronization error</string>
	<string name="sync_complete">Synchronization complete</string>
	<string name="sync_queued_more">Added %1$d requests to queue</string>
	<string name="sync_no_queued">No pending requests.</string>
	<string name="sync_pending_requests">Pending Requests</string>
	<string name="settings_basic">Basic</string>
	<string name="settings_aggressive_syncing">Aggressive Syncing</string>
	<string name="settings_aggressive_syncing_desc">Check to have Zandy attempt to keep all collections synced</string>
	<string name="settings_user_id">User ID</string>
	<string name="settings_user_id_desc">This is the numeric user ID for your account at Zotero.org</string>
	<string name="settings_api_key">API Key</string>
	<string name="settings_api_key_desc">This is the API key to access your account at Zotero.org</string>
	<string name="settings_webdav">WebDAV</string>
	<string name="settings_webdav_enabled">Enable WebDAV</string>
	<string name="settings_webdav_enabled_desc">Check to have Zandy look for attachments on a WebDAV host</string>
	<string name="settings_webdav_path">Base URL</string>
	<string name="settings_webdav_path_desc">Server and path for your WebDAV setup, including the final /zotero, like this: https://www.example.com/users/bobsmith/zotero</string>
	<string name="settings_webdav_username">Username</string>
	<string name="settings_webdav_username_desc">Username for WebDAV server. This is separate from your Zotero username.</string>
	<string name="settings_webdav_password">Password</string>
	<string name="settings_webdav_password_desc">Password for WebDAV server. This is separate from your Zotero password.</string>
	<string name="settings_reset_database">Clear local database</string>
	<string name="settings_reset_database_warning">Are you sure you want to erase all local data? This cannot be undone.</string>
    <string name="settings_read_only">Read-Only Mode</string>
    <string name="settings_read_only_desc">Check to prevent Zandy from making modifications to data on the Zotero servers.</string>
    <string name="settings_webdav_ssl_override">Override SSL</string>
    <string name="settings_webdav_ssl_override_desc">Check to skip SSL certificate checking, for servers using self-signed SSL certificates.</string>
    <string name="settings_test_connections">Test Zotero and WebDAV connections</string>
    <string name="note">Note</string>
    <string name="note_for_item">Note for %s</string>
    <string name="note_edit">Edit note</string>
    <string name="template_artwork">{"itemType":"artwork","title":"-_-_-","creators":[{"creatorType":"artist","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","artworkMedium":"-_-_-","artworkSize":"-_-_-","date":"-_-_-","language":"-_-_-","shortTitle":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","url":"-_-_-","accessDate":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
    <string name="template_audioRecording">{"itemType":"audioRecording","title":"-_-_-","creators":[{"creatorType":"performer","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","audioRecordingFormat":"-_-_-","seriesTitle":"-_-_-","volume":"-_-_-","numberOfVolumes":"-_-_-","place":"-_-_-","label":"-_-_-","date":"-_-_-","runningTime":"-_-_-","language":"-_-_-","ISBN":"-_-_-","shortTitle":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","url":"-_-_-","accessDate":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
    <string name="template_bill">{"itemType":"bill","title":"-_-_-","creators":[{"creatorType":"sponsor","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","billNumber":"-_-_-","code":"-_-_-","codeVolume":"-_-_-","section":"-_-_-","codePages":"-_-_-","legislativeBody":"-_-_-","session":"-_-_-","history":"-_-_-","date":"-_-_-","language":"-_-_-","url":"-_-_-","accessDate":"-_-_-","shortTitle":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
    <string name="template_blogPost">{"itemType":"blogPost","title":"-_-_-","creators":[{"creatorType":"author","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","blogTitle":"-_-_-","websiteType":"-_-_-","date":"-_-_-","url":"-_-_-","accessDate":"-_-_-","language":"-_-_-","shortTitle":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
        <string name="template_book">{"itemType":"book","title":"-_-_-","creators":[{"creatorType":"author","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","series":"-_-_-","seriesNumber":"-_-_-","volume":"-_-_-","numberOfVolumes":"-_-_-","edition":"-_-_-","place":"-_-_-","publisher":"-_-_-","date":"-_-_-","numPages":"-_-_-","language":"-_-_-","ISBN":"-_-_-","shortTitle":"-_-_-","url":"-_-_-","accessDate":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
        <string name="template_bookSection">{"itemType":"bookSection","title":"-_-_-","creators":[{"creatorType":"author","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","bookTitle":"-_-_-","series":"-_-_-","seriesNumber":"-_-_-","volume":"-_-_-","numberOfVolumes":"-_-_-","edition":"-_-_-","place":"-_-_-","publisher":"-_-_-","date":"-_-_-","pages":"-_-_-","language":"-_-_-","ISBN":"-_-_-","shortTitle":"-_-_-","url":"-_-_-","accessDate":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
        <string name="template_case">{"itemType":"case","caseName":"-_-_-","creators":[{"creatorType":"author","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","reporter":"-_-_-","reporterVolume":"-_-_-","court":"-_-_-","docketNumber":"-_-_-","firstPage":"-_-_-","history":"-_-_-","dateDecided":"-_-_-","language":"-_-_-","shortTitle":"-_-_-","url":"-_-_-","accessDate":"-_-_-","rights":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
        <string name="template_computerProgram">{"itemType":"computerProgram","title":"-_-_-","creators":[{"creatorType":"programmer","firstName":"-_-_-","lastName":"-_-_-"}],"abstractNote":"-_-_-","seriesTitle":"-_-_-","version":"-_-_-","date":"-_-_-","system":"-_-_-","place":"-_-_-","company":"-_-_-","programmingLanguage":"-_-_-","ISBN":"-_-_-","shortTitle":"-_-_-","url":"-_-_-","rights":"-_-_-","archive":"-_-_-","archiveLocation":"-_-_-","libraryCatalog":"-_-_-","callNumber":"-_-_-","accessDate":"-_-_-","extra":"-_-_-","tags":[],"notes":[]}</string>
</resources>